--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ body {
     display: flex;
     min-height: 100vh;
     flex-direction: column;
+    background-color: #f4f4f4;
 }
 
 header, footer {
@@ -33,10 +34,12 @@ h2 {
 }
 
 /* Styles pour le quizz */
-#quizz {
-    border: 1px solid #ccc;
+#quizz, #corrections {
     padding: 20px;
     max-width: 900px;
+    background-color: #fff;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 #question p {
@@ -72,8 +75,6 @@ img {
 
 /* Styles pour la section des corrections */
 #corrections {
-    border: 1px solid #ccc;
-    padding: 20px;
     margin-top: 20px;
 }
 
@@ -107,4 +108,12 @@ img {
 form {
     display: flex;
     flex-direction: column;
+}
+button, form input[type="number"] {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 15px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    box-sizing: border-box;
 }
